--- a/frecuencia_visita.html
+++ b/frecuencia_visita.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="es">
 <head>
@@ -13,63 +12,118 @@
 <body>
   <div class="container mt-5">
     <h2 class="text-center mb-4">Actualizar Frecuencia de Visita</h2>
-    <form class="shadow p-4 rounded bg-light" onsubmit="event.preventDefault(); enviarFormulario();">
+    <form class="shadow p-4 rounded bg-light" onsubmit="event.preventDefault(); enviarFrecuenciaVisita();">
       <div class="mb-3">
         <label for="codigo" class="form-label">Código del Cliente:</label>
         <input type="text" class="form-control" id="codigo" required>
       </div>
       <div class="mb-3">
+        <label for="nombre" class="form-label">Nombre del Cliente:</label>
+        <input type="text" class="form-control" id="nombre" readonly>
+      </div>
+      <div class="mb-3">
         <label for="ruta" class="form-label">Ruta:</label>
-        <input type="text" class="form-control" id="ruta" required>
+        <input type="number" class="form-control" id="ruta" required maxlength="3" oninput="validarRuta(this)">
       </div>
       <div class="mb-3">
         <label for="semana" class="form-label">Semana de Visita:</label>
-        <input type="text" class="form-control" id="semana" required>
+        <select class="form-control" id="semana" required>
+          <option value="">Seleccione una semana</option>
+          <option value="Semana 1">Semana 1</option>
+          <option value="Semana 2">Semana 2</option>
+          <option value="Semana 3">Semana 3</option>
+          <option value="Semana 4">Semana 4</option>
+        </select>
       </div>
       <div class="mb-3">
         <label for="dia" class="form-label">Día de Visita:</label>
-        <input type="text" class="form-control" id="dia" required>
+        <select class="form-control" id="dia" required>
+          <option value="">Seleccione un día</option>
+          <option value="Lunes">Lunes</option>
+          <option value="Martes">Martes</option>
+          <option value="Miércoles">Miércoles</option>
+          <option value="Jueves">Jueves</option>
+          <option value="Viernes">Viernes</option>
+          <option value="Sábado">Sábado</option>
+          <option value="Domingo">Domingo</option>
+        </select>
       </div>
       <button type="submit" class="btn btn-primary w-100">📤 Enviar</button>
     </form>
   </div>
   <a href="index.html" class="btn btn-secondary floating-btn">⬅️ Volver</a>
-<script>
-  function enviarFrecuenciaVisita() {
-    const codigo = document.getElementById("codigo").value;
-    const ruta = document.getElementById("ruta").value;
-    const semana = document.getElementById("semana").value;
-    const dia = document.getElementById("dia").value;
 
-    if (!codigo || !ruta || !semana || !dia) {
-      alert("⚠️ Por favor completa todos los campos.");
-      return;
+  <script>
+    document.getElementById("codigo").addEventListener("blur", buscarNombreCliente);
+
+    function validarRuta(input) {
+      input.value = input.value.replace(/[^0-9]/g, '').slice(0, 3);
     }
 
-    fetch('https://script.google.com/macros/s/AKfycbzibTYzh67G2Cpw1mcSvXFHmPDX5Ul8DPh69Vj2rHdZWi0rlyEL4KhFvmHOINu4Fq4TPA/exec', {
-      method: 'POST',
-      mode: 'no-cors',
-      headers: { 'Content-Type': 'application/json' },
-      body: JSON.stringify({
-        tipo: "actualizar_frecuencia_visita",
-        codigo: codigo,
-        ruta: ruta,
-        semana: semana,
-        dia: dia
-      })
-    })
-    .then(() => {
-      alert("✅ Datos enviados correctamente.");
-      document.getElementById("codigo").value = "";
-      document.getElementById("ruta").value = "";
-      document.getElementById("semana").value = "";
-      document.getElementById("dia").value = "";
-    })
-    .catch(error => {
-      alert("❌ Error al enviar los datos: " + error);
-    });
-  }
-</script>
+    function buscarNombreCliente() {
+      const codigo = document.getElementById("codigo").value.trim();
+      const nombreInput = document.getElementById("nombre");
 
+      nombreInput.classList.remove("is-valid");
+
+      if (!codigo) {
+        nombreInput.value = "";
+        return;
+      }
+
+      fetch("clientes.json") // Reemplaza esta URL por la tuya
+        .then(response => response.json())
+        .then(data => {
+          const cliente = data.find(c => c.codigo === codigo);
+          if (cliente) {
+            nombreInput.value = cliente.nombre;
+            nombreInput.classList.add("is-valid");
+          } else {
+            nombreInput.value = "No encontrado";
+          }
+        })
+        .catch(err => {
+          console.error("Error cargando clientes.json:", err);
+          nombreInput.value = "Error al buscar";
+        });
+    }
+
+    function enviarFrecuenciaVisita() {
+      const codigo = document.getElementById("codigo").value;
+      const ruta = document.getElementById("ruta").value;
+      const semana = document.getElementById("semana").value;
+      const dia = document.getElementById("dia").value;
+
+      if (!codigo || !ruta || !semana || !dia) {
+        alert("⚠️ Por favor completa todos los campos.");
+        return;
+      }
+
+      fetch('https://script.google.com/macros/s/AKfycbxznxQdaoW8nRwbNQpqe0kJ9-T_ALmB16fuDXlTE47WA4CKXZuYe-Vwsy3Pj0dg5E9F/exec', {
+        method: 'POST',
+        mode: 'no-cors',
+        headers: { 'Content-Type': 'application/json' },
+        body: JSON.stringify({
+          tipo: "actualizar_frecuencia_visita",
+          codigo: codigo,
+          ruta: ruta,
+          semana: semana,
+          dia: dia
+        })
+      })
+      .then(() => {
+        alert("✅ Datos enviados correctamente.");
+        document.getElementById("codigo").value = "";
+        document.getElementById("nombre").value = "";
+        document.getElementById("nombre").classList.remove("is-valid");
+        document.getElementById("ruta").value = "";
+        document.getElementById("semana").value = "";
+        document.getElementById("dia").value = "";
+      })
+      .catch(error => {
+        alert("❌ Error al enviar los datos: " + error);
+      });
+    }
+  </script>
 </body>
 </html>
